# tester-radar

./: .gitignore  README.md  collector_commander.py  generate_daily_todo.sh  main.py  main_bnk.py  make_python_template_project.sh  post_issue.sh  post_issues.sh  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_it.sh  run_server.sh  starred_repo.json
.github/: FUNDING.yml  dependabot.yml
analysis/: github.py
api_templates/: db.py  main.py
bots/: wechaty_demo.py
clients/: github_client.py
collectors/: __init__.py  base.py
docs/: Dockerfile  README.md  blogs.yml  daily.yml  design-fetcher.md  keywords.yml  mkdocs.yml
extractors/: exceptions.py  supplement.py
feeds/: admin.yml  blogs.yml  bots.yml  collector_commander.py  event.yml  mobile.yml  test-engineering.yml  testing.yml
hooks/: post_gen_project.py
ideas/: productivity-ideas.md
logins/: zhihu.py
logs/: log-2020-11-29-18-09.txt
py-tester-radar/: README.md  main.py  requirements.txt  setup.py
python-template/: .gitignore  .pre-commit-config.yaml
scripts/: create_backend_packages.sh  parse_status.py
source/: admin-springboot.yml  blog_source.yml  books.yml  devops.yml  fin_quantitative.yml  lib.yml  opensource-test.yml  scrapy.yml  shell-todo.md  source_code_reading.yml  todo.yml
spiders/: __init__.py
support/: code_generator.py  result.go  smartcontract.part  smartcontractPre.part  swagger.json
tests/: postmodernTestingManifestor.txt  sample_repo.json  test_base.py  test_code_generator.py  test_github.py  test_readme_render.py  test_stars.py  (+2 more)
(+423 files in other folders)
