[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pkg"
author = "Patrick is Patrick"
author-email = "patrick@ground.com"
home-page = "https://github.com/qdriven/python-project-template"

[tool.flit.metadata.requires-extra]
test = ["coverage[toml]", "pytest"]
dev = ["pre-commit"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
